testdata/invalid/syntax/unterminated_string.pact
// Unterminated string literal
component User {
	name: "unterminated string
}
